todo-ui/ui-deployment-gcloud.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: ui-deployment 
  namespace: todo-app
  labels: 
    app: ui-todo
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: ui-todo
  template: 
    metadata: 
      labels: 
        app: ui-todo
    spec: 
      containers: 
      - name: nginx-runner
        image: gcr.io/todo-app-339413/todo-ui:v1.0
        ports: 
          - containerPort: 80
