todo-ui/ui-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: ui-deployment 
  namespace: todo-app
  labels: 
    app: ui-todo
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: ui-todo
  template: 
    metadata: 
      labels: 
        app: ui-todo
    spec: 
      containers: 
      - name: nginx-runner
        image: localhost:32000/todo-ui:v1 
        ports: 
          - containerPort: 80
