todo-ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-loadbalancer
  namespace: todo-app
spec:
  type: LoadBalancer
  ports:
    - port: 5051
      targetPort: 80
  selector:
    app: ui-todo
