todo-ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-ingress
  namespace: todo-app
spec:
  rules:
    - host: group3.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-loadbalancer
                port:
                  number: 5051
